# Camory

./: README.md  package-lock.json  package.json  tailwind.config.js
migration/: camory.sql  create+insert.sql
src/: AddCardPage.tsx  App.tsx  CreateDeckPage.tsx  GameMenu.tsx  GamePage.tsx  GameSummary.tsx  HomePage.tsx  LandingPage.tsx  LearningPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  StatisticPage.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddCardBack.tsx  AddCardFront.tsx  AnswerDisplay.tsx  BackButton.tsx  BackgroundFlag.tsx  Button.tsx  CardBack.tsx  CardDisplay.tsx  CardFront.tsx  DeckDisplay.tsx  GameDisplay.tsx  GamePreview.tsx  GameSummary.tsx  GraphBar.tsx  Loading.tsx  NavItem.tsx  Navbar.tsx  PageLoader.tsx  QuestionDisplay.tsx  WarningMessage.tsx
src/models/: Card.ts  Deck.ts  Game.ts  GameCard.ts  GameCardChoice.ts  GamePlayer.ts  User.ts  UserCard.ts
